--- a/languages/wpglobus-featured-images.pot
+++ b/languages/wpglobus-featured-images.pot
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: WPGlobus Featured Images 1.5.2\n"
-"Report-Msgid-Bugs-To: http://www.wpglobus.com/pg/contact-us/\n"
+"Report-Msgid-Bugs-To: https://wpglobus.com/pg/contact-us/\n"
 "POT-Creation-Date: 2016-12-27 14:59:41+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -42,5 +42,5 @@ msgid "WPGlobus"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "http://www.wpglobus.com/"
+msgid "https://wpglobus.com/"
 msgstr ""
